2004-09-06  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c (mono_param_get_objects): Initialize the default value
	with DBNull.Value, not null. Fixes #62123.

2004-09-01  Miguel de Icaza  <miguel@ximian.com>

	* marshal.c (mono_marshal_get_managed_wrapper): Remove FIXME and
	throw an exception with a cute explanation.

2004-09-06  Dick Porter  <dick@ximian.com>

	* process.c (ves_icall_System_Diagnostics_Process_Start_internal):
	Close the new process's thread handle, as we don't use it.  The
	handle stays around forever otherwise.

2004-09-06  Zoltan Varga  <vargaz@freemail.hu>

	* object.c (arith_overflow): Fix warning.

	* reflection.c (mono_image_get_methodref_token): Do not emit unmanaged
	calling conventions in method refs. Fixes #65352.

	* reflection.c: Fix warnings.

2004-09-06 Ben Maurer  <bmaurer@users.sourceforge.net>

	* icall.c: Add a new icall for Array.Clear

2004-09-06 Ben Maurer  <bmaurer@users.sourceforge.net>

	* object.c: When allocating an array, we have to throw
	an overflow exception if any of the lengths are < 0.

2004-09-06  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.h marshal.c: Free unmanaged memory allocated by managed code
	properly. Also move implementation of string array marshalling to 
	managed code. Fixes #42316.

2004-09-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* assembly.c: provide more information when loading an assembly fails.

2004-09-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* filewatcher.c: don't expect the development fam package to be
	installed.

2004-09-03  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c: Make a copy of the signature cookie since it will be
	freed by the caller.
	
	* marshal.c (mono_delegate_to_ftnptr): Fix bug in previous patch.

	* marshal.c (mono_delegate_to_ftnptr): Fix memory leaks.

	* metadata.c (mono_metadata_free_marshal_spec): New function to free
	marshal specs.

	* marshal.c: More refactoring.
	